[gd_scene format=3 uid="uid://bkug7wowkh7rj"]

[ext_resource type="Script" uid="uid://bsdpwnsgbewcs" path="res://ui/settings/settings_ui.gd" id="1_mv08y"]
[ext_resource type="Theme" uid="uid://b6x5n4w0q2x3" path="res://ui/resources/main_theme.tres" id="2_theme"]

[node name="SettingsUI" type="CanvasLayer" unique_id=77076675]
layer = 10
script = ExtResource("1_mv08y")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -316.0
offset_top = 20.0
offset_right = -16.0
offset_bottom = -80.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_theme")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HeaderHBox" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Settings"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HeaderHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "âœ•"
flat = true

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ContentVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="KeySetting" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/KeySetting"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Root Key"

[node name="KeyOptionButton" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/KeySetting"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ModeSetting" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/ModeSetting"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Scale Mode"

[node name="ModeOptionButton" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/ModeSetting"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="NotationSetting" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/NotationSetting"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Notation"

[node name="NotationOptionButton" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/NotationSetting"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RhythmSetting" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/RhythmSetting"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Rhythm Mode"

[node name="RhythmCheckButton" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/RhythmSetting"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VizDivider" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="VizLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
text = "Visuals"
horizontal_alignment = 1

[node name="VizGrid" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
columns = 2

[node name="NoteLabelCheck" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/VizGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Note Labels"
button_pressed = true

[node name="RootCheck" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/VizGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Root Only"
button_pressed = true

[node name="ChordCheck" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/VizGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Chord Tones"
button_pressed = true

[node name="ScaleCheck" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/VizGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Scale Tones"
button_pressed = true

[node name="FocusRangeRow" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/FocusRangeRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Focus Range"

[node name="MinusButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/FocusRangeRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
text = "-"

[node name="ValueLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/FocusRangeRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
text = "3"
horizontal_alignment = 1

[node name="PlusButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/FocusRangeRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
text = "+"

[node name="DeadzoneRow" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/DeadzoneRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Cam Deadzone"

[node name="DeadzoneMinus" type="Button" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/DeadzoneRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
text = "-"

[node name="DeadzoneValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/DeadzoneRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
text = "4.0"
horizontal_alignment = 1

[node name="DeadzonePlus" type="Button" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/DeadzoneRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
text = "+"

[node name="MetronomeRow" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/MetronomeRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Metronome"

[node name="MetronomeToggle" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/MetronomeRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
